Enlarge update button in Prof Fee pop-over. Add trapping for date explode func.

--- a/src/app/components/inpatientmodal/inpatientmodal.page.html
+++ b/src/app/components/inpatientmodal/inpatientmodal.page.html
@@ -146,11 +146,12 @@ o888o        d888b    `Y8bod8P' o888o      o888o        `Y8bod8P' `Y8bod8P'
           <ion-text class="ion-text-wrap">Remarks : {{remarks}}</ion-text>
         </div>
       </ion-item>
-      <ion-item lines="none">
+      <ion-item lines="none" style="padding-top: 10px;" style="padding-bottom: 8px;">
         <ion-grid class="ion-no-padding">
           <ion-row>
             <ion-col size-xs="12">
               <ion-button
+                size="default"
                 expand="block"
                 shape="round"
                 (click)="detail(data.admission_no)"
