Update app logo with shine and shadow.

--- a/src/app/components/logo/logo.component.html
+++ b/src/app/components/logo/logo.component.html
@@ -1,2 +1,3 @@
 <!-- <img src="assets/img/LOGOMARK.png" alt="Chong Hua Hospital"> -->
-<img src="assets/img/dpp-app-logo-15.png" alt="Chong Hua Hospital">
+<!-- <img src="assets/img/dpp-app-logo-15.png" alt="Chong Hua Hospital"> -->
+<img src="assets/img/dpp-app-icon-shine-shadow.png" alt="Chong Hua Hospital">
