Use Chong Hua Hospital Branding colors in global themeing (where applicable.

--- a/src/global.scss
+++ b/src/global.scss
@@ -26,7 +26,8 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 /*For Google Web Font*/
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+//@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');  // Inter
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&display=swap'); // Nunito
 
 // @font-face {
 //   font-family: 'Inter';
@@ -47,7 +48,8 @@
 */
 
 .tab-font-family {
-  font-family: "Inter", sans-serif;
+  //font-family: "Inter", sans-serif;
+  font-family: "Nunito", sans-serif;
 }
 
 .desktop-wrapper {
