--- a/src/assets/highcharts/highcharts.css
+++ b/src/assets/highcharts/highcharts.css
@@ -16,7 +16,8 @@
   /* #1072 */
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   /* font-family: "Lucida Grande", "Lucida Sans Unicode", Arial, Helvetica, sans-serif; */
-  font-family: "Inter", sans-serif;
+  /*font-family: "Inter", sans-serif;*/
+  font-family: "Nunito", sans-serif;
   font-size: 12px;
   user-select: none;
 }
