--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -5,66 +5,130 @@
 :root {
   --background-color: #ffffff;
   --text-color: #292b2c;
-  /** primary **/
+  /** default primary **/
+  /*
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
   --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary-tint: #4c8dff;*/
+
+ /** CHH Primary **/
+  --ion-color-primary: #275228;
+  --ion-color-primary-rgb: 39,82,40;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255,255,255;
+  --ion-color-primary-shade: #224823;
+  --ion-color-primary-tint: #3d633e;
 
   /** Use Google Web Font - Inter **/
-  --ion-font-family: "Inter", sans-serif;
+  //--ion-font-family: "Inter", sans-serif;
+  --ion-font-family: "Nunito", sans-serif;
 
-  /** secondary **/
+  /** default secondary **/
+  /*
   --ion-color-secondary: #3dc2ff;
   --ion-color-secondary-rgb: 61, 194, 255;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
   --ion-color-secondary-shade: #36abe0;
-  --ion-color-secondary-tint: #50c8ff;
+  --ion-color-secondary-tint: #50c8ff;*/
 
-  /** tertiary **/
+  /** CHH Secondary **/
+  --ion-color-secondary: #009444;
+  --ion-color-secondary-rgb: 0,148,68;
+  --ion-color-secondary-contrast: #ffffff;
+  --ion-color-secondary-contrast-rgb: 255,255,255;
+  --ion-color-secondary-shade: #00823c;
+  --ion-color-secondary-tint: #1a9f57;
+
+  /** default tertiary **/
+  /*
   --ion-color-tertiary: #5260ff;
   --ion-color-tertiary-rgb: 82, 96, 255;
   --ion-color-tertiary-contrast: #ffffff;
   --ion-color-tertiary-contrast-rgb: 255, 255, 255;
   --ion-color-tertiary-shade: #4854e0;
-  --ion-color-tertiary-tint: #6370ff;
+  --ion-color-tertiary-tint: #6370ff;*/
 
-  /** success **/
+  /** CHH Tertiary **/
+  --ion-color-tertiary: #E0BA5B;
+  --ion-color-tertiary-rgb: 224,186,91;
+  --ion-color-tertiary-contrast: #000000;
+  --ion-color-tertiary-contrast-rgb: 0,0,0;
+  --ion-color-tertiary-shade: #c5a450;
+  --ion-color-tertiary-tint: #e3c16b;
+
+  /** default success **/
+  /*
   --ion-color-success: #2dd36f;
   --ion-color-success-rgb: 45, 211, 111;
   --ion-color-success-contrast: #ffffff;
   --ion-color-success-contrast-rgb: 255, 255, 255;
   --ion-color-success-shade: #28ba62;
-  --ion-color-success-tint: #42d77d;
+  --ion-color-success-tint: #42d77d;*/
 
-  /** warning **/
+  /** CHH Success **/
+  --ion-color-success: #009444;
+  --ion-color-success-rgb: 0,148,68;
+  --ion-color-success-contrast: #ffffff;
+  --ion-color-success-contrast-rgb: 255,255,255;
+  --ion-color-success-shade: #00823c;
+  --ion-color-success-tint: #1a9f57;
+
+  /** default warning **/
+  /*
   --ion-color-warning: #ffc409;
   --ion-color-warning-rgb: 255, 196, 9;
   --ion-color-warning-contrast: #000000;
   --ion-color-warning-contrast-rgb: 0, 0, 0;
   --ion-color-warning-shade: #e0ac08;
+  --ion-color-warning-tint: #ffca22;*/
+
+  /** CHH Warning **/
+  --ion-color-warning: #ffc409;
+  --ion-color-warning-rgb: 255,196,9;
+  --ion-color-warning-contrast: #000000;
+  --ion-color-warning-contrast-rgb: 0,0,0;
+  --ion-color-warning-shade: #e0ac08;
   --ion-color-warning-tint: #ffca22;
 
-  /** danger **/
+  /** default danger **/
+  /*
   --ion-color-danger: #eb445a;
   --ion-color-danger-rgb: 235, 68, 90;
   --ion-color-danger-contrast: #ffffff;
   --ion-color-danger-contrast-rgb: 255, 255, 255;
   --ion-color-danger-shade: #cf3c4f;
-  --ion-color-danger-tint: #ed576b;
+  --ion-color-danger-tint: #ed576b;*/
 
-  /** dark **/
+  /** CHH Danger **/
+  --ion-color-danger: #D12027;
+  --ion-color-danger-rgb: 209,32,39;
+  --ion-color-danger-contrast: #ffffff;
+  --ion-color-danger-contrast-rgb: 255,255,255;
+  --ion-color-danger-shade: #b81c22;
+  --ion-color-danger-tint: #d6363d;
+
+  /** default dark **/
+  /*
   --ion-color-dark: #222428;
   --ion-color-dark-rgb: 34, 36, 40;
   --ion-color-dark-contrast: #ffffff;
   --ion-color-dark-contrast-rgb: 255, 255, 255;
   --ion-color-dark-shade: #1e2023;
-  --ion-color-dark-tint: #383a3e;
+  --ion-color-dark-tint: #383a3e;*/
 
-  /** medium **/
+  /** CHH Dark **/
+  --ion-color-dark: #231F20;
+  --ion-color-dark-rgb: 35,31,32;
+  --ion-color-dark-contrast: #ffffff;
+  --ion-color-dark-contrast-rgb: 255,255,255;
+  --ion-color-dark-shade: #1f1b1c;
+  --ion-color-dark-tint: #393536;
+
+  /** default medium **/
   --ion-color-medium: #92949c;
   --ion-color-medium-rgb: 146, 148, 156;
   --ion-color-medium-contrast: #ffffff;
@@ -72,13 +136,26 @@
   --ion-color-medium-shade: #808289;
   --ion-color-medium-tint: #9d9fa6;
 
-  /** light **/
+  /** CHH Medium **/
+  /* Doesn't look good in the app */ 
+  /*
+  --ion-color-medium: #83898C;
+  --ion-color-medium-rgb: 131,137,140;
+  --ion-color-medium-contrast: #000000;
+  --ion-color-medium-contrast-rgb: 0,0,0;
+  --ion-color-medium-shade: #73797b;
+  --ion-color-medium-tint: #8f9598;*/
+
+  /** default light **/
   --ion-color-light: #f4f5f8;
   --ion-color-light-rgb: 244, 245, 248;
   --ion-color-light-contrast: #000000;
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  /** CHH Light **/
+  // TBD
 
   --ion-color-mango: #275228;
   --ion-color-mango-rgb: 255, 204, 102;
