Update button labels to comply with style guide.

--- a/src/app/components/addappointmentsmodal/addappointmentsmodal.page.html
+++ b/src/app/components/addappointmentsmodal/addappointmentsmodal.page.html
@@ -170,7 +170,7 @@
                   color="mango"
                   disabled="{{uxSaveCancel}}"
                 >
-                  Save
+                  SAVE
                 </ion-button>
               </ion-col>
               <ion-col size-xs="6">
@@ -181,7 +181,7 @@
                   (click)="closeModal()"
                   color="danger"
                 >
-                  Cancel
+                  CANCEL
                 </ion-button>
               </ion-col>
             </ion-row>
