--- a/src/app/components/fee/fee.page.html
+++ b/src/app/components/fee/fee.page.html
@@ -45,7 +45,7 @@
           color="mango"
           [disabled]="!disableSaveBtn"
         >
-          Save
+          SAVE
         </ion-button>
       </ion-col>
       <ion-col size-xs="6">
@@ -56,7 +56,7 @@
           (click)="ClosePopover()"
           color="danger"
         >
-          Cancel
+          CANCEL
         </ion-button>
       </ion-col>
     </ion-row>
