User experience and cosmetic updates.

--- a/src/app/components/addappointmentsmodal/addappointmentsmodal.page.html
+++ b/src/app/components/addappointmentsmodal/addappointmentsmodal.page.html
@@ -25,6 +25,8 @@
         <ion-card mode="ios">
           <ion-card-content>
             <ion-item class="ion-no-padding">
+              <ion-icon name="business-outline" slot="start"
+              style="padding-top: 5px !important;"></ion-icon>
               <ion-label position="floating">Chong Hua Hospital</ion-label>
               <ion-select
                 [(ngModel)]="location"
@@ -46,6 +48,8 @@
         <ion-card mode="ios">
           <ion-card-content>
             <ion-item class="ion-no-padding">
+              <ion-icon name="calendar-outline" slot="start"
+              style="padding-top: 5px !important;"></ion-icon>
               <ion-label
                 position="fixed"
                 style="z-index: 10;"
@@ -60,6 +64,8 @@
               ></ion-input>
             </ion-item>
             <ion-item class="ion-no-padding">
+              <ion-icon name="time-outline" slot="start"
+              style="padding-top: 5px !important;"></ion-icon>
               <ion-label position="floating">Time</ion-label>
               <ion-select
                 [(ngModel)]="time"
@@ -108,6 +114,8 @@
               <!--ion-label position="fixed"  style="z-index:10">Birthdate</ion-label>
         <li-ionic4-datepicker [(ngModel)]="mydate2" [inputDateConfig]="datePickerObj2" ></li-ionic4-datepicker-->
               <ion-item class="ion-no-padding">
+                <ion-icon name="today-outline" slot="start"
+              style="padding-top: 5px !important;"></ion-icon>
                 <ion-label
                   position="fixed"
                   style="z-index: 10;"
@@ -123,6 +131,8 @@
               </ion-item>
             </ion-item>
             <ion-item class="ion-no-padding">
+              <ion-icon name="male-female-outline" slot="start"
+              style="padding-top: 5px !important;"></ion-icon>
               <ion-label position="floating">Gender</ion-label>
               <ion-select
                 placeholder="Select"
@@ -139,6 +149,8 @@
         <ion-card disabled="{{uxEndpart}}" mode="ios">
           <ion-card-content>
             <ion-item class="ion-no-padding">
+              <ion-icon name="map-outline" slot="start"
+              style="padding-top: 5px !important;"></ion-icon>
               <ion-label position="floating">Address</ion-label>
               <ion-textarea
                 id="input-remarks"
@@ -147,6 +159,8 @@
               ></ion-textarea>
             </ion-item>
             <ion-item class="ion-no-padding">
+              <ion-icon name="call-outline" slot="start"
+              style="padding-top: 5px !important;"></ion-icon>
               <ion-label position="floating">Contact Number</ion-label>
               <ion-input id="input-remarks" [(ngModel)]="contact"></ion-input>
             </ion-item>
