--- a/src/app/page/login/login.page.html
+++ b/src/app/page/login/login.page.html
@@ -6,7 +6,7 @@
           <ion-card-content>
             <div class="center">
               <app-logo></app-logo>
-              <h1>Hello, Doc!</h1>
+              <h1><b>Hello, Doc!</b></h1>
             </div>
             <ion-item>
               <ion-label position="floating">Username</ion-label>
@@ -45,6 +45,6 @@
 </ion-content>
 <ion-footer class="ion-no-border">
   <ion-toolbar>
-    <p>v1.0.0-rc15</p>
+    <p>v1.0.0-rc16</p>
   </ion-toolbar>
 </ion-footer>
