--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -348,6 +348,7 @@
             <ion-list-header slot="center" mode="ios">
               No Data Available
             </ion-list-header>
+            <img src="assets/img/3973477-no-data-concept-illustration-custom.png">
           </div>
         </ng-template>
       </ion-col>
