--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -56,3 +56,10 @@
 .custom-skeleton ion-skeleton-text:last-child {
   margin-bottom: 10px;
 }
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  //width: 40%;
+}
