--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -285,6 +285,7 @@
           <ion-list-header slot="center" mode="ios">
             No Data Available
           </ion-list-header>
+          <img src="assets/img/3973477-no-data-concept-illustration-custom.png">
         </div>
       </ion-col>
     </ion-row>
