--- a/src/app/page/index/index.page.html
+++ b/src/app/page/index/index.page.html
@@ -80,8 +80,10 @@
               app.
             </p>
             <ion-row>
-              <ion-col size-lg="2" offset-md="5">
-                <app-start></app-start>
+              <ion-col size-lg="4" offset-lg="4">
+                <app-start *ngIf="!android"></app-start>
+                <ion-button *ngIf="android" shape="round" expand="block" (click)="addToHomeScreen()" color="mango">Install</ion-button>
+
               </ion-col>
             </ion-row>
           </ion-slide>
