Add cosmetic changes to labels.

--- a/src/app/components/addappointmentsmodal/addappointmentsmodal.page.html
+++ b/src/app/components/addappointmentsmodal/addappointmentsmodal.page.html
@@ -27,7 +27,7 @@
             <ion-item class="ion-no-padding">
               <ion-icon name="business-outline" slot="start"
               style="padding-top: 5px !important;"></ion-icon>
-              <ion-label position="floating">Chong Hua Hospital</ion-label>
+              <ion-label position="floating">Chong Hua Hospital Site</ion-label>
               <ion-select
                 [(ngModel)]="location"
                 okText="Ok"
