--- a/src/app/page/index/index.page.html
+++ b/src/app/page/index/index.page.html
@@ -82,7 +82,7 @@
             <ion-row>
               <ion-col size-lg="4" offset-lg="4">
                 <app-start *ngIf="!android"></app-start>
-                <ion-button *ngIf="android" shape="round" expand="block" (click)="addToHomeScreen()" color="mango">Install</ion-button>
+                <ion-button *ngIf="android" shape="round" expand="block" (click)="addToHomeScreen()" color="mango">INSTALL</ion-button>
 
               </ion-col>
             </ion-row>
