Add ionicons on Add Appointment fields.

--- a/src/app/components/addappointmentsmodal/addappointmentsmodal.page.html
+++ b/src/app/components/addappointmentsmodal/addappointmentsmodal.page.html
@@ -87,6 +87,8 @@
         <ion-card disabled="{{uxUserInfo}}" mode="ios">
           <ion-card-content>
             <ion-item class="ion-no-padding">
+              <ion-icon name="reader-outline" slot="start"
+              style="padding-top: 5px !important;"></ion-icon>
               <ion-label position="floating">First Name</ion-label>
               <ion-input
                 (ionChange)="userInfo()"
@@ -95,6 +97,8 @@
               ></ion-input>
             </ion-item>
             <ion-item class="ion-no-padding">
+              <ion-icon name="reader-outline" slot="start"
+              style="padding-top: 5px !important;"></ion-icon>
               <ion-label position="floating">Middle Name</ion-label>
               <ion-input
                 (ionChange)="userInfo()"
@@ -103,6 +107,8 @@
               ></ion-input>
             </ion-item>
             <ion-item class="ion-no-padding">
+              <ion-icon name="reader-outline" slot="start"
+              style="padding-top: 5px !important;"></ion-icon>
               <ion-label position="floating">Last Name</ion-label>
               <ion-input
                 (ionChange)="userInfo()"
