Fix retrieved professional fee not displaying on fee popOver. Also the following updates:      - Update release candidate version.      - Update success and error messages.      - Update Prof Fee update and delete params to be compatible with API changes.

--- a/src/app/components/fee/fee.page.html
+++ b/src/app/components/fee/fee.page.html
@@ -14,11 +14,12 @@
     <ion-label position="fixed">Fee</ion-label>
     <ion-input
       type="number"
+      maxlength=7 
       id="input-professionalFee"
-      ngModel="postData.professionalFee"
       placeholder="0.00"
+      [(ngModel)]="professionalFee"
       value="{{professionalFee}}"
-      autocomplete
+      type="number"
       (ionChange)="feeInputChanged()"
     ></ion-input>
   </ion-item>
