--- a/src/app/components/inpatientmodal/inpatientmodal.page.html
+++ b/src/app/components/inpatientmodal/inpatientmodal.page.html
@@ -155,7 +155,7 @@ o888o        d888b    `Y8bod8P' o888o      o888o        `Y8bod8P' `Y8bod8P'
                 expand="block"
                 shape="round"
                 (click)="detail(data.admission_no)"
-                color="mango"
+                *ngIf="data.is_posted == 0 || data.is_posted == null"
                 *ngIf="data.admission_status != 'PP'"
                 >UPDATE</ion-button
               >
