Allow Doctors to submit PF anytime even when status is still Admitted.

--- a/src/app/components/inpatientmodal/inpatientmodal.page.html
+++ b/src/app/components/inpatientmodal/inpatientmodal.page.html
@@ -133,7 +133,7 @@ ooooooooo.                       .o88o.    oooooooooooo
 o888o        d888b    `Y8bod8P' o888o      o888o        `Y8bod8P' `Y8bod8P' 
 -->
 
-  <ion-card mode="ios" *ngIf="data.admission_status == 'DN'">
+  <ion-card mode="ios" >
     <ion-list>
       <ion-item style="padding-top: 10px;">
         <div class="ion-text-wrap"><b>Professional Fee</b><br /></div>
