updated button color on Inpatient modal

--- a/src/app/components/inpatientmodal/inpatientmodal.page.html
+++ b/src/app/components/inpatientmodal/inpatientmodal.page.html
@@ -151,6 +151,7 @@ o888o        d888b    `Y8bod8P' o888o      o888o        `Y8bod8P' `Y8bod8P'
           <ion-row>
             <ion-col size-xs="12">
               <ion-button
+              color="mango"
                 size="default"
                 expand="block"
                 shape="round"
