--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -16,11 +16,11 @@
         offset-lg="3"
         class="custom-border-bottom chh-darkmode"
       >
-        <app-hospital
+        <chh-app-hospital
           (hospital)="locationAction($event)"
           [readonlyComp]="buttonDisablerHospSelector"
           [Activator]="hospitalActivator"
-        ></app-hospital>
+        ></chh-app-hospital>
         <chh-app-date-selector
           [passedDate]="selectedDate"
           (dateSelector)="dateChanged($event)"
