--- a/src/app/components/slider/slider.page.html
+++ b/src/app/components/slider/slider.page.html
@@ -1,6 +1,6 @@
 <ion-slides pager>
   <ion-slide>
-    <app-logo></app-logo>
+    <chh-app-logo></chh-app-logo>
     <h1><b>Welcome aboard, Doc!</b></h1>
     <div align="center">
       <!-- <img src="assets/animations/21474-medical-frontliners.gif" /> -->
