--- a/src/app/page/login/login.page.html
+++ b/src/app/page/login/login.page.html
@@ -5,7 +5,7 @@
         <ion-card mode="ios">
           <ion-card-content>
             <div class="center">
-              <app-logo></app-logo>
+              <chh-app-logo></chh-app-logo>
               <h1><b>Hello, Doc!</b></h1>
             </div>
             <ion-item>
