--- a/src/app/chh-web-components/chh-app-slider/chh-app-slider.page.html
+++ b/src/app/chh-web-components/chh-app-slider/chh-app-slider.page.html
@@ -74,7 +74,7 @@
     </p>
     <ion-row>
       <ion-col size-lg="2" offset-md="5">
-        <app-start></app-start>
+        <chh-app-start></chh-app-start>
       </ion-col>
     </ion-row>
   </ion-slide>
