--- a/src/app/page/index/index.page.html
+++ b/src/app/page/index/index.page.html
@@ -81,7 +81,7 @@
             </p>
             <ion-row>
               <ion-col size-lg="4" offset-lg="4">
-                <app-start *ngIf="!android"></app-start>
+                <chh-app-start *ngIf="!android"></chh-app-start>
                 <ion-button *ngIf="android" shape="round" expand="block" (click)="addToHomeScreen()" color="mango">INSTALL</ion-button>
 
               </ion-col>
