--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -52,10 +52,10 @@
               >
                 <ion-item lines="none">
                   <ion-avatar slot="start">
-                    <text-avatar
+                    <chh-app-text-avatar
                       [text]="y.patientName"
                       [color]=""
-                    ></text-avatar>
+                    ></chh-app-text-avatar>
                   </ion-avatar>
                   <ion-label style="margin-top: -5px;">
                     <ion-item class="ion-no-padding">
