--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -28,7 +28,7 @@
             <br />
             <ion-item lines="none">
               <ion-avatar slot="start">
-                <text-avatar [text]="x.last_name" [color]=""></text-avatar>
+                <chh-app-text-avatar [text]="x.last_name" [color]=""></chh-app-text-avatar>
               </ion-avatar>
               <ion-label style="margin-top: -5px;">
                 <ion-item class="ion-no-padding">
