--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -27,7 +27,7 @@
 
           <ion-item lines="none" routerLink='/menu/in-patients/AC' routerDirection="back">
             <ion-avatar slot="start">
-              <text-avatar [text]='admitted' [color]=""></text-avatar>
+              <chh-app-text-avatar [text]='admitted' [color]=""></chh-app-text-avatar>
             </ion-avatar>
             
             <ion-label>
@@ -39,7 +39,7 @@
       <ion-col size-xs="6" >
           <ion-item lines="none" routerLink='/menu/in-patients/DN' routerDirection="back">
             <ion-avatar slot="start">
-              <text-avatar [text]='discharge' [color]=""></text-avatar>
+              <chh-app-text-avatar [text]='discharge' [color]=""></chh-app-text-avatar>
             </ion-avatar>
             <ion-label>
               <h1><b>{{getTotalCount.ForDischarge}}</b></h1>
