--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -84,7 +84,7 @@
             <ion-card (click)="detail(x)" mode="ios">
               <ion-item lines="none">
                 <ion-avatar slot="start">
-                  <text-avatar [text]="x.last_name" [color]=""></text-avatar>
+                  <chh-app-text-avatar [text]="x.last_name" [color]=""></chh-app-text-avatar>
                 </ion-avatar>
                 <ion-label style="margin-top: -5px;">
                   <ion-item
