Refactored login & tab3 page with constant WEEK_DAY & DPP Version

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -45,6 +45,6 @@
 </ion-content>
 <ion-footer class="ion-no-border">
   <ion-toolbar>
-    <p>v1.0.1</p>
+    <p>{{this.constants.DOCTOR_PORTAL__VALUE__VERSION}}</p>
   </ion-toolbar>
 </ion-footer>
