--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -100,7 +100,7 @@
                 </ion-item>
 
                 <ion-item lines="none">
-                  <p>For inquiries, please contact Systems Solution & Business Intelligence Team of Chong Hua Hospital IT Division (<b><a href="tel: +63322338000">+63 32 233 8000</a></b>). <br/> <br />App Version: v1.0.1</p>
+                  <p>For inquiries, please contact Systems Solution & Business Intelligence Team of Chong Hua Hospital IT Division (<b><a href="tel: +63322338000">+63 32 233 8000</a></b>). <br/> <br />App Version: {{this.constants.DOCTOR_PORTAL__VALUE__VERSION}}</p>
                 </ion-item>
               </ion-list>
             </ion-card-content>
