add pointer on hover:desktop mode; disabled refresh on darkmode

--- a/src/global.scss
+++ b/src/global.scss
@@ -75,7 +75,7 @@
    position: absolute; 
    display: block;  
 }
-
+.pointer {cursor: pointer;}
  .my-custom-modal-css .modal-wrapper {
    height: 45%;
    width: 95%;
