--- a/src/app/components/logo-sm/logo-sm.component.html
+++ b/src/app/components/logo-sm/logo-sm.component.html
@@ -1,1 +1,2 @@
-<img src="{{logo}}" alt="Chong Hua Hospital" slot="end">
+<img src="assets/img/orgwidelogosupergraphic.png" class="darkmode" alt="Chong Hua Hospital" >
+<img src="assets/img/orgwidelogo.png" class="lightmode" alt="Chong Hua Hospital" >
