--- a/src/app/components/logo-sm/logo-sm.component.scss
+++ b/src/app/components/logo-sm/logo-sm.component.scss
@@ -1,3 +1,22 @@
 img {
     width: 80%;
 }
+
+
+@media (prefers-color-scheme: dark) {
+  .darkmode{
+      display: inline;
+  }
+  .lightmode{
+      display:none;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+    .darkmode{
+        display: none;
+    }
+    .lightmode{
+        display:inline;
+    }
+  }
