--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -81,7 +81,7 @@
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
         <ng-container>
           <div *ngFor="let x of inPatients">
-            <ion-card (click)="detail(x)" mode="ios">
+            <ion-card (click)="detail(x)" mode="ios" class="pointer">
               <ion-item lines="none">
                 <ion-avatar slot="start">
                   <text-avatar [text]="x.last_name" [color]=""></text-avatar>
