--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -49,6 +49,7 @@
               <ion-card
                 (click)="presentActionSheet(y.appt_id,y.status,y.patientName)"
                 mode="ios"
+                class="pointer"
               >
                 <ion-item lines="none">
                   <ion-avatar slot="start">
