--- a/src/global.scss
+++ b/src/global.scss
@@ -282,3 +282,19 @@ body {
 .swiper-pagination {
   bottom: 97% !important;
 }
+body[color-theme="dark"] {
+  .darkmode{
+    display: block;
+  }
+  .lightmode{
+    display: none;
+  }
+}
+body[color-theme="light"] {
+  .darkmode{
+    display: none;
+  }
+  .lightmode{
+    display: block;
+  }
+}
