Refactored chh-app-in-patient-modal implement shared function closeModal

--- a/src/app/chh-web-components/chh-app-in-patient-modal/chh-app-in-patient-modal.page.html
+++ b/src/app/chh-web-components/chh-app-in-patient-modal/chh-app-in-patient-modal.page.html
@@ -39,7 +39,7 @@ o888o        `Y888""8o   "888" o888o `Y8bod8P' o888o o888o   "888"
       slot="end"
       class="buttons-last-slot sc-ion-buttons-ios-h sc-ion-buttons-ios-s ios hydrated"
     >
-      <ion-button (click)="closeModal()" color="chh-css-primary2"
+      <ion-button (click)="this.functionsService.closeModal(this.modalController)" color="chh-css-primary2"
         >Close&nbsp; <ion-icon name="close-outline"></ion-icon
       ></ion-button>
     </ion-buttons>
