updated tab names & change the Managed Days

--- a/src/app/chh-web-components/chh-app-in-patient-modal/chh-app-in-patient-modal.page.html
+++ b/src/app/chh-web-components/chh-app-in-patient-modal/chh-app-in-patient-modal.page.html
@@ -266,7 +266,7 @@ o888o        d888b    `Y8bod8P' o888o      o888o        `Y8bod8P' `Y8bod8P'
       <ion-item style="padding-top: 10px;" lines="none">
         <div class="ion-text-wrap">
           <ion-text style="padding-top: 15px;"
-            >Days of Manage: {{daysOfManage}} Days<br/>
+            >Days Managed: {{daysOfManage}} Days<br/>
         </ion-text>
           <ion-text style="padding-top: 15px;"
             >Amount : {{professionalFee}}<br
