--- a/src/app/chh-web-components/chh-app-hospital-selector-with-all-and-filter/chh-app-hospital-selector-with-all-and-filter.page.html
+++ b/src/app/chh-web-components/chh-app-hospital-selector-with-all-and-filter/chh-app-hospital-selector-with-all-and-filter.page.html
@@ -1,5 +1,33 @@
-
 <div class="navbar" class="ion-text-center" >
+  <ion-button fill="clear" (click)="onSubmit(this.constants.CHH_SITE__CODE__ALL,active3)" 
+  [ngClass]="{'active-link':active3, 'notactive':!active3}" 
+    class="link" size="small">
+    {{this.functionsService.convertToSentenceCase(this.constants.CHH_LABEL__VALUE__BOTH)}}
+  </ion-button>
+  <ion-button fill="clear" (click)="onSubmit(this.constants.CHH_SITE__CODE__CEBU,active)" 
+  [ngClass]="{'active-link':active, 'notactive':!active}" 
+    class="link" size="small">
+    {{this.functionsService.convertToSentenceCase(this.constants.CHH_LABEL__VALUE__CEBU)}}
+  </ion-button>
+  <ion-button fill="clear" (click)="onSubmit(this.constants.CHH_SITE__CODE__MANDAUE,active1)" 
+  [ngClass]="{'active-link':active1, 'notactive':!active1}"
+    class="link" size="small">
+    {{this.functionsService.convertToSentenceCase(this.constants.CHH_LABEL__VALUE__MANDAUE)}}
+  </ion-button>
+  <ion-button fill="clear"  *ngIf="isDesktop"
+  [ngClass]="{'active-link':active2, 'notactive':!active2}" 
+    class="link" size="small">
+    <ion-select [(ngModel)]="admittedOrDischarge" placeholder="Filter" (ionChange)="changeRedirect($event)" color="mango">
+      <ion-select-option value={{this.constants.CHH_SITE__VALUE__ALL}}>{{this.functionsService.convertToSentenceCase(this.constants.CHH_SITE__VALUE__ALL)}}</ion-select-option>
+      <ion-select-option value={{this.constants.ADMISSION_STATUS__CODE__ADMITTED}}>{{this.functionsService.convertToSentenceCase(this.constants.ADMISSION_STATUS__VALUE__ADMITTED)}}</ion-select-option>
+      <ion-select-option value={{this.constants.ADMISSION_STATUS__CODE__FOR_DISCHARGE}}>{{this.functionsService.convertToSentenceCase(this.constants.ADMISSION_STATUS__VALUE__FOR_DISCHARGE)}}</ion-select-option>
+    </ion-select>
+  </ion-button>
+</div>
+
+<!-- BEFORE REFACTORED -->
+<!-- 9-3-2020 -->
+<!-- <div class="navbar" class="ion-text-center" >
   <ion-button fill="clear" (click)="onSubmit('A',active3)" 
   [ngClass]="{'active-link':active3, 'notactive':!active3}" 
     class="link" size="small">
@@ -24,7 +52,4 @@
       <ion-select-option value="DN">For Discharge</ion-select-option>
     </ion-select>
   </ion-button>
-
-
-
-</div>
+</div> -->
