added swipe gesture on tab2

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -23,6 +23,7 @@
         ></chh-app-hospital>
         <chh-app-date-selector
           [passedDate]="selectedDate"
+          [header-data]="headerData"
           (dateSelector)="dateChanged($event)"
           [readonlyComp]="buttonDisablerDateSelector"
         ></chh-app-date-selector>
@@ -30,8 +31,8 @@
     </ion-row>
   </ion-grid>
 </ion-header>
-<ion-content>
-  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" mode="ios">
+<ion-content id="headerx">
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)" mode="ios" *ngIf="isDesktop">
     <ion-refresher-content></ion-refresher-content>
   </ion-refresher>
   <ion-fab vertical="bottom" horizontal="end" slot="fixed" color="mangolight">
@@ -39,8 +40,10 @@
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
-
-  <ion-grid class="ion-no-padding">
+  <div class="spin" [hidden]="ishidden">
+    <ion-spinner class="spinner-class"></ion-spinner>
+  </div>
+  <ion-grid class="ion-no-padding" id="headery">
     <ion-row>
       <ion-col size-md="8" offset-md="2" size-lg="4" offset-lg="4">
         <!-- <ng-container> -->
