--- a/src/app/chh-web-components/chh-app-hospital-selector-with-all-and-filter/chh-app-hospital-selector-with-all-and-filter.page.html
+++ b/src/app/chh-web-components/chh-app-hospital-selector-with-all-and-filter/chh-app-hospital-selector-with-all-and-filter.page.html
@@ -18,8 +18,8 @@
   <ion-button fill="clear"  *ngIf="isDesktop"
   [ngClass]="{'active-link':active2, 'notactive':!active2}" 
     class="link" size="small">
-    <ion-select    value="{{admittedOrDischarge}}" placeholder="Filter" (ionChange)="changeRedirect($event)" color="mango">
-      <ion-select-option value="ALL">All</ion-select-option>
+    <ion-select [(ngModel)]="admittedOrDischarge" placeholder="Filter" (ionChange)="changeRedirect($event)" color="mango">
+      <ion-select-option value="ALL" >All</ion-select-option>
       <ion-select-option value="AC">Admitted</ion-select-option>
       <ion-select-option value="DN">For Discharge</ion-select-option>
     </ion-select>
