--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -35,7 +35,7 @@
               routerLinkActive="active-link"
               class="link"
             >
-              Dashboard
+              {{this.constants.MENU__VALUE__DASHBOARD}}
             </ion-button>
             <ion-button
               fill="clear"
@@ -44,7 +44,7 @@
               routerLinkActive="active-link"
               class="link"
             >
-              In-Patients
+              {{this.constants.MENU__VALUE__IN_PATIENTS}}
             </ion-button>
             <ion-button
               fill="clear"
@@ -53,7 +53,7 @@
               routerLinkActive="active-link"
               class="link"
             >
-              Appointments
+              {{this.constants.MENU__VALUE__APPOINTMENTS}}
             </ion-button>
             <ion-button
               fill="clear"
@@ -62,7 +62,7 @@
               routerLinkActive="active-link"
               class="link"
             >
-              Settings
+            {{this.constants.MENU__VALUE__SETTINGS}}
             </ion-button>
             <ion-button
               fill="clear"
@@ -71,7 +71,7 @@
               class="link"
               (click)="logout()"
             >
-              Log Out
+            {{this.constants.MENU__VALUE__LOG_OUT}}
             </ion-button>
           </div>
         </ion-col>
@@ -82,6 +82,6 @@
   <ion-router-outlet></ion-router-outlet>
 
   <div class="footer tab-font-family">
-    <span>Chong Hua Hospital</span>
+    <span>{{this.constants.CHH_NAME__VALUE__CEBU}}</span>
   </div>
 </div>
