--- a/src/app/chh-web-components/chh-app-hospital-selector-with-all-and-filter/chh-app-hospital-selector-with-all-and-filter.page.html
+++ b/src/app/chh-web-components/chh-app-hospital-selector-with-all-and-filter/chh-app-hospital-selector-with-all-and-filter.page.html
@@ -18,12 +18,18 @@
   <ion-button fill="clear"  *ngIf="isDesktop"
   [ngClass]="{'active-link':active2, 'notactive':!active2}" 
     class="link" size="small">
-    <ion-select [(ngModel)]="admittedOrDischarge" placeholder="Filter" (ionChange)="changeRedirect($event)" color="mango">
+    <ion-select [(ngModel)]="admittedOrDischarge" placeholder="Filter" (ionChange)="changeRedirect($event)" color="mango" style="display:none">
       <ion-select-option value="ALL" >All</ion-select-option>
       <ion-select-option value="AC">Admitted</ion-select-option>
       <ion-select-option value="DN">For Discharge</ion-select-option>
     </ion-select>
+    <select [(ngModel)]="admittedOrDischarge" placeholder="Filter" (ionChange)="changeRedirect($event)" color="mango" style="border:none;">
+      <option value="ALL">All</option>
+      <option value="AC">Admitted</option>
+      <option value="DN">for Discharge</option>
+    </select>
   </ion-button>
+
 
 
 
