--- a/src/app/chh-web-components/chh-app-hospital-selector-with-all-and-filter/chh-app-hospital-selector-with-all-and-filter.page.html
+++ b/src/app/chh-web-components/chh-app-hospital-selector-with-all-and-filter/chh-app-hospital-selector-with-all-and-filter.page.html
@@ -19,12 +19,12 @@
   [ngClass]="{'active-link':active2, 'notactive':!active2}" 
     class="link" size="small">
     <ion-select [(ngModel)]="admittedOrDischarge" placeholder="Filter" (ionChange)="changeRedirect($event)" color="mango" style="display:none">
-      <ion-select-option value="ALL" >All</ion-select-option>
+      <ion-select-option value="All" >All</ion-select-option>
       <ion-select-option value="AC">Admitted</ion-select-option>
       <ion-select-option value="DN">For Discharge</ion-select-option>
     </ion-select>
     <select [(ngModel)]="admittedOrDischarge" placeholder="Filter" (ionChange)="changeRedirect($event)" color="mango" style="border:none;">
-      <option value="ALL">All</option>
+      <option value="All">All</option>
       <option value="AC">Admitted</option>
       <option value="DN">for Discharge</option>
     </select>
