--- a/src/app/tab-appointments/tab-appointments.page.html
+++ b/src/app/tab-appointments/tab-appointments.page.html
@@ -2,7 +2,7 @@
   <div *ngIf="!isDesktop">
     <ion-toolbar color="mango">
       <ion-title>
-        <ion-icon name="calendar-outline"></ion-icon> Appointments
+        <ion-icon name="calendar-outline"></ion-icon> {{this.constants.MENU__VALUE__APPOINTMENTS}}
       </ion-title>
     </ion-toolbar>
   </div>
@@ -82,24 +82,24 @@
                         <ion-badge
                           color="success"
                           slot="end"
-                          *ngIf="y.status == 'Complete'"
+                          *ngIf="y.status == this.constants.APPOINTMENT_STATUS__VALUE__COMPLETE"
                           >Completed</ion-badge
                         >
                         <ion-badge
                           color="primary"
-                          *ngIf="y.status == 'Waiting'"
+                          *ngIf="y.status == this.constants.APPOINTMENT_STATUS__VALUE__WAITING"
                           slot="end"
                           >{{y.status}}</ion-badge
                         >
                         <ion-badge
                           color="secondary"
-                          *ngIf="y.status == 'Serving'"
+                          *ngIf="y.status == this.constants.APPOINTMENT_STATUS__VALUE__SERVING"
                           slot="end"
                           >{{y.status}}</ion-badge
                         >
                         <ion-badge
                           color="warning"
-                          *ngIf="y.status == 'Reserved'"
+                          *ngIf="y.status == this.constants.APPOINTMENT_STATUS__VALUE__RESERVED"
                           slot="end"
                           >{{y.status}}</ion-badge
                         >
@@ -287,7 +287,7 @@
 
         <div *ngIf="!objecthandler">
           <ion-list-header slot="center" mode="ios">
-            No Data Available
+            {{this.messages.NO_DATA_AVAILABLE}}
           </ion-list-header>
           <img src="assets/img/3973477-no-data-concept-illustration-custom.png">
         </div>
