--- a/src/app/tab-settings/tab-settings.page.html
+++ b/src/app/tab-settings/tab-settings.page.html
@@ -2,7 +2,7 @@
   <div *ngIf="!isDesktop">
     <ion-toolbar color="mango">
       <ion-title>
-        <ion-icon name="settings-outline"></ion-icon> Settings
+        <ion-icon name="settings-outline"></ion-icon> {{this.constants.MENU__VALUE__SETTINGS}}
       </ion-title>
       <ion-buttons
         slot="end"
@@ -12,7 +12,7 @@
           (click)="logout()"
           color="chh-css-primary2"
           class="ios button button-clear ion-activatable ion-focusable hydrated"
-          >Log out&nbsp; <ion-icon name="log-out-outline"></ion-icon>
+          >{{this.constants.MENU__VALUE__LOG_OUT}}&nbsp; <ion-icon name="log-out-outline"></ion-icon>
         </ion-button>
       </ion-buttons>
     </ion-toolbar>
@@ -33,7 +33,7 @@
               <ion-label style="margin-top: -5px;">
                 <ion-item class="ion-no-padding">
                   <h2 class="ion-text-wrap" style="padding-top: 20px;">
-                    DR. {{ x.first_name }} {{ x.last_name }}
+                    {{this.constants.NAME_PREFIX__CODE__DOCTOR.toLocaleUpperCase()}} {{ x.first_name }} {{ x.last_name }}
                   </h2>
                 </ion-item>
               </ion-label>
@@ -46,11 +46,11 @@
                 </ion-item>
                 <ion-item>
                   <ion-icon slot="end" name="notifications-outline"></ion-icon>
-                  <b>Notifications</b>
+                  <b>{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_NOTIFICATIONS}}</b>
                 </ion-item>
                 <ion-item>
                   <ion-label class="ion-text-wrap"
-                    >Notify me via SMS if my patient is admitted</ion-label
+                    >{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_SMS_NOTIFICATIONS_ADMITTED}}</ion-label
                   >
                   <ion-toggle
                     color="mango"
@@ -60,8 +60,7 @@
                 </ion-item>
                 <ion-item>
                   <ion-label class="ion-text-wrap"
-                    >Notify me via SMS if my patient is about to be
-                    discharged</ion-label
+                    >{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_SMS_NOTIFICATIONS_FOR_DISCHARGE}}</ion-label
                   >
                   <ion-toggle
                     color="mango"
@@ -71,7 +70,7 @@
                 </ion-item>
                 <ion-item>
                   <ion-label class="ion-text-wrap"
-                    >Alert me through Push Notifications</ion-label
+                    >{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_PUSH_NOTIFICATIONS}}</ion-label
                   >
                   <ion-toggle disabled="true"></ion-toggle>
                 </ion-item>
@@ -81,11 +80,11 @@
 
                 <ion-item>
                   <ion-icon slot="end" name="color-palette-outline"></ion-icon>
-                  <b>Appearance</b>
+                  <b>{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_APPEARANCE}}</b>
                 </ion-item>
                 <ion-item>
                   <ion-label class="ion-text-wrap"
-                    >Switch to Dark Mode</ion-label
+                    >{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_APPEARANCE_DARK_MODE}}</ion-label
                   >
                   <ion-toggle
                     color="mango"
@@ -100,7 +99,7 @@
                 </ion-item>
 
                 <ion-item lines="none">
-                  <p>For inquiries, please contact Systems Solution & Business Intelligence Team of Chong Hua Hospital IT Division (<b><a href="tel: +63322338000">+63 32 233 8000</a></b>). <br/> <br />App Version: {{this.constants.DOCTOR_PORTAL__VALUE__VERSION}}</p>
+                  <p>{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO}} (<b><a href="tel: +63322338000">{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_TELEPHONE}}</a></b>). <br/> <br />{{this.constants.UI_COMPONENT_TEXT__VALUE__SETTINGS_INFO_APP_VERSION}} {{this.constants.DOCTOR_PORTAL__VALUE__VERSION}}</p>
                 </ion-item>
               </ion-list>
             </ion-card-content>
