updated the icon of the login

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -41,6 +41,9 @@
 
             <ion-card-content class="ion-no-padding">
               <ion-list>
+                <!--ion-item>
+                  <p (click)="showaddmodal()" class="pointer">Change Password</p>
+                </ion-item-->
                 <ion-item>
                   <br />
                 </ion-item>
