updated UI for change password. Updated Press enter to login

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -26,7 +26,7 @@
 
               
 
-              <ion-input type="password" id="input-password" [type]="getType()"  [(ngModel)]="postData.password"></ion-input>
+              <ion-input type="password" id="input-password" [type]="getType()"  (keyup.enter)="loginAction()" [(ngModel)]="postData.password"></ion-input>
               <ion-icon  name="eye-off-outline" [name]="getName()" item-right   class="rectangle"></ion-icon>
 
 
