--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -41,9 +41,12 @@
 
             <ion-card-content class="ion-no-padding">
               <ion-list>
-                <!--ion-item>
+                <!--ion-item>W
                   <p (click)="showaddmodal()" class="pointer">Change Password</p>
                 </ion-item-->
+                <ion-item>
+                  <p (click)="showaddmodal1()" class="pointer">Change Password</p>
+                </ion-item>
                 <ion-item>
                   <br />
                 </ion-item>
