--- a/src/app/chh-web-components/chh-app-change-pass/chh-app-change-pass.page.html
+++ b/src/app/chh-web-components/chh-app-change-pass/chh-app-change-pass.page.html
@@ -25,12 +25,6 @@
 
         <ion-card mode="ios"   >
           <ion-list>
-            <ion-input type="password" id="input-password" placeholder = "Old Password" [type]="getType1()"  [(ngModel)]="OldPassword"></ion-input>
-
-            <p>{{OldPassword}}</p>
-
-
-
             <ion-item style="padding-top: 10px;">
               <div class="ion-text-wrap"><b>Old Password</b><br /></div>
             </ion-item>
@@ -41,7 +35,7 @@
           </ion-list>
           <ion-list>
             <ion-item style="padding-top: 10px;">
-              <div class="ion-text-wrap"><b>New Password</b><br /></div>
+              <div class="ion-text-wrap pWord" #psWord1 id="pWord1" ><b>New Password</b> <i>{{errMessage}}</i><br /></div>
             </ion-item>
             <ion-item>
               <ion-input type="password" id="input-password" placeholder = "New Password" [type]="getType2()"  [(ngModel)]="NewPassword"></ion-input>
@@ -50,13 +44,42 @@
           </ion-list>
           <ion-list>
             <ion-item style="padding-top: 10px;">
-              <div class="ion-text-wrap"><b>Confirm Password</b><br /></div>
+              <div class="ion-text-wrap pWord" id="pWord2" #psWord2 ><b>Confirm Password</b><i>{{errMessage}}</i><br /></div>
             </ion-item>
             <ion-item>
               <ion-input type="password" id="input-password" placeholder = "Confirm Password" [type]="getType3()"  [(ngModel)]="ConfirmPassword"></ion-input>
               <ion-icon  name="eye-off-outline" [name]="getName3()" item-right   class="rectangle3"></ion-icon>
             </ion-item>
           </ion-list>
+
+
+          <ion-grid>
+            <ion-row>
+              <ion-col size-xs="6">
+                <ion-button
+                  expand="block"
+                  shape="round"
+                  id="btn-confirm"
+                  (click)="save()"
+                  color="mango"
+                  disabled="{{uxSaveCancel}}"
+                >
+                  SAVE
+                </ion-button>
+              </ion-col>
+              <ion-col size-xs="6">
+                <ion-button
+                  expand="block"
+                  shape="round"
+                  id="btn-confirm"
+                  (click)="closeModal()"
+                  color="danger"
+                >
+                  CANCEL
+                </ion-button>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
         </ion-card>
 
 
